fix: align pagination bar

--- a/src/components/ArtworkCard/ArtworkCard.scss
+++ b/src/components/ArtworkCard/ArtworkCard.scss
@@ -59,6 +59,7 @@
             width: 59px;
             padding: 17px;
             box-sizing: border-box;
+            font-size: 12px;
         }
 
         &__favorite.active{
